# ServidorHTTP

./: CMakeLists.txt  cola.h  lista.h  main.c
consulta/: procesarConsulta.c  procesarConsulta.h
modo/: fifo.c  fifo.h  forked.c  forked.h  pre-forked.c  pre-forked.h  pre-threaded.c  pre-threaded.h  threaded.c  threaded.h
